took off fixed height, aligned reward status and button

--- a/styles.css
+++ b/styles.css
@@ -243,7 +243,6 @@ nav {
 
 .reward {
     max-width: 750px;
-    /* height: 250px; */
     margin: 2rem 0px;
     padding: 1.2rem;
     border: 1px solid rgb(195, 195, 195);
@@ -267,11 +266,25 @@ nav {
 .rewardStatus {
     display: flex;
     flex-direction: column;
+    margin: 15px 0px;
 }
+
 .pledgeAmount {
     color: var(--moderateCyan);
     font-weight: 500;
     margin: 5px 0px
+}
+
+.rewardButton {
+    max-width: 150px;
+    padding: .675rem;
+    border-radius: 30px;
+    border: none;
+    background-color: var(--moderateCyan);
+    color: white;
+    font-weight: 700;
+    font-size: .775rem;
+    margin-top: 10px;
 }
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
@@ -316,8 +329,7 @@ nav {
     .rewardStatus {
         flex-direction: row;
         justify-content: space-between;
-        
+        align-items: center;
     }
-    
 
 } 
